--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,22 @@ node_modules/
 
 # Environment variables
 .env
+.env.local
+.env.production
+.env.development
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Third party libraries (should be in dependencies)
+bpmn-js/
+
+# Temporary files
+nul
+*.tmp
+*.temp
 
 # Editor directories and files
 .idea
@@ -23,6 +39,41 @@ node_modules/
 
 # OS specific
 .DS_Store
+Thumbs.db
 
 # YoYo AI version control directory
 .yoyo/
+
+# Coverage reports
+coverage/
+*.lcov
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env.test
