--- a/server/package.json
+++ b/server/package.json
@@ -12,16 +12,17 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
+    "online-bpmn-diff": "file:..",
     "ws": "^8.18.3",
-    "yjs": "^13.6.27",
     "y-websocket": "^1.5.4",
-    "cors": "^2.8.5"
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
-    "prettier": "^3.1.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "prettier": "^3.1.0"
   },
   "keywords": [
     "bpmn",
